Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22816

Binding not evaluated correctly sometimes

    XMLWordPrintable

Details

    Description

      It seems that under certain conditions bindings do not get evaluated correctly (or at all?)

      In the attached example (brokenBinding.qml) text bound to "copyEnabled" does not change to false even when the property itself changes to false. You can see this by following steps:

      1. Write some text into the text field
      2. Select the text by mouse
      3. Press on "copy" box (the green one)
      4. Press on "paste" box (the blue one)

      -> now "copyEnabled" changes to false, but the text (id: copyText) remains "true"

      I've tried to simplify the example as much as possible. E.g. if you remove the "dummy" property from the top the problem does not reproduce anymore. The same happens when you remove the "|| !readOnly" check from the "cutEnabled" property.

      This bug might be related to QTBUG-22411.

      Attachments

        For Gerrit Dashboard: QTBUG-22816
        # Subject Branch Project Status CR V

        Activity

          People

            aakenned Aaron Kennedy
            skananoj Sami Kananoja
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes