Don't disconnect mid binding evaluation

Task-number: QTBUG-22816
Change-Id: I7a958203945a051322228b6fade9e1d49d5f4c4a
Reviewed-by: Roberto Raggi <roberto.raggi@nokia.com>